# space

./: .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  commands.py  galaxy.json  galaxy_DE.json  galaxy_EN.json  lang.py  locations.py  planets.py  pyproject.toml  refactoring.md  requirements.txt  requirements_dev.txt  setup.py  ships.py  solution.txt  space.py  start.sh  test_random.py  test_space.py  views.py  walkthrough.py
.github/workflows/: build.yml
space_game/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py  facade.py  galaxy.py  galaxy_EN.json  game.py  gui.py  lang.py  location.py  logging_util.py  middleware.py  planets.py  ships.py  space.py  views.py
space_game/images/: ARTWORK_LICENSE
space_game_with_repo/: __main__.py  app.py  cli.py  config.py  dto.py  errors.py  facade.py  galaxy_DE.json  galaxy_EN.json  game.py  gui.py  ingest.py  lang.py  location.py  models.py  repository.py  repository_dict.py  repository_duckdb.py  repository_mongodb.py  repository_postgres.py
static/: index.html
templates/: action.html  game.html  new_game.html
tests/: solution.txt  test_cli.py  test_facade.py  test_space.py
tests/test_data/: mini_galaxy.json
