[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["space_game"]

[project]
name = "pandas_go_to_space"
version = "1.1.0"
authors = [
  { name="Kristian Rother", email="kristian.rother@posteo.de" },
]
description = "a space-traveling adventure game"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/krother/space"
Issues = "https://github.com/krother/space/issues"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["space_game", "tests"]
flake8-max-line-length = 120
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18

[tool.black]
line-length = 120
skip-string-normalization = true
skip-numeric-underscore-normalization = true
exclude = "/(\\.git|build|dist)/"

[tool.isort]
src_paths = ["space_game", "tests"]
lines_after_imports = 2

[tool.coverage.run]
branch = true
source = ["space_game"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
