
[project]
name = "pandas_go_to_space"
version = "1.1.0"
authors = [
  { name="Kristian Rother", email="kristian.rother@posteo.de" },
]
description = "a space-traveling adventure game"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "arcade==2.6.17",
    "fastapi==0.110.1",
    "httpx==0.27.0",
    "Jinja2==3.1.3",
    "pydantic==2.6.4",
    "starlette==0.37.2",
    "urllib3==2.2.1",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "pylint==2.15.4",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "faker",
    "pre-commit==3.7.0",
    "mypy==1.7.1",
    "black==24.8.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "flake8-isort==6.1.1",
]

[project.scripts]
space = "space_game.cli:main"
space_gui = "space_game.gui:main"

[project.urls]
Homepage = "https://github.com/krother/space"
Issues = "https://github.com/krother/space/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["space_game"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["space_game", "tests"]
flake8-max-line-length = 79
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = "/(\\.git|build|dist|.venv)/"

[tool.isort]
src_paths = ["space_game", "tests"]
lines_after_imports = 2

[tool.coverage.run]
branch = true
source = ["space_game"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
