
[project]
name = "pandas_go_to_space"
version = "1.1.0"
authors = [
  { name="Kristian Rother", email="kristian.rother@posteo.de" },
]
description = "a space-traveling adventure game"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "arcade>=4.0.0.dev3",
    "faker>=40.12.0",
    "fastapi[standard]>=0.135.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.0b3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pytest",
    "pylint>=4.0.5",
    "pytest-cov>=7.1.0",
    "pytest-flake8>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    #"pre-commit==3.7.0",
]

[project.scripts]
space = "space_game.cli:main"
space_gui = "space_game.gui:main"

[project.urls]
Homepage = "https://github.com/krother/space"
Issues = "https://github.com/krother/space/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["space_game"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["space_game", "tests"]
flake8-max-line-length = 79
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = "/(\\.git|build|dist|.venv)/"

[tool.isort]
src_paths = ["space_game", "tests"]
lines_after_imports = 2

[tool.coverage.run]
branch = true
source = ["space_game"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
